<resources>
    <string name="app_name">环信</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="btn_login">登陆</string>
    <string name="registered">立即注册</string>
    <string name="forget_password1">忘记密码？</string>
    <string name="maximum_of_pwd_num">输入6~30位字母或数字</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
